[package]
name = "rust-traverse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
time = "0.2.23"
crossterm = "0.26"
distance = "0.4.0"
ratatui = "0.20"
sysinfo = "0.29.0"
trash = "3.0.2"
walkdir = "2.3.3"
